fix all overflow styles with less params

--- a/frontend/src/Public.styles.less
+++ b/frontend/src/Public.styles.less
@@ -18,5 +18,5 @@
 .public-container {
   background-size: cover;
   padding: 10vh 0;
-  max-height: 100vh;
+  height: 100vh;
 }
