--- a/frontend/src/components/recent/recent-item-list.styles.less
+++ b/frontend/src/components/recent/recent-item-list.styles.less
@@ -1,3 +1,8 @@
 .project-item-div {
   padding: 8px;
 }
+
+.todo-contents {
+  height: calc(100% - 150px);
+  overflow: auto;
+}
