--- a/frontend/src/index.less
+++ b/frontend/src/index.less
@@ -10,6 +10,10 @@ body {
   box-sizing: border-box;
 }
 
+#root {
+  height: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
