--- a/frontend/src/pages/bujo/bujo.styles.less
+++ b/frontend/src/pages/bujo/bujo.styles.less
@@ -22,6 +22,10 @@
   }
 }
 
+.todo.calendar {
+  .pages-property(unset);
+}
+
 .refreshButton {
   padding-left: 0.6em;
 }
