--- a/frontend/src/pages/note/note-page.styles.less
+++ b/frontend/src/pages/note/note-page.styles.less
@@ -3,7 +3,6 @@
 .note-page {
   position: relative;
   .pages-property();
-  height: calc(100% - 20vh);
 
   &.public {
     background: rgba(255, 255, 255, 0.9);
