--- a/frontend/src/pages/pages.style.less
+++ b/frontend/src/pages/pages.style.less
@@ -1,8 +1,7 @@
-.pages-property() {
+.pages-property(@vheight : 65vh) {
   margin: 10vh auto;
   padding: 1vh 2vw;
-  min-height: 80%;
-  max-height: 90vh;
+  height: @vheight;
   width: 60%;
   max-width: 1024px;
   @media screen and (max-width: 1024px) {
